--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "fetch": "^1.1.0",
-    "handlebars": "^4.7.6",
     "http": "0.0.1-security",
     "ioredis": "^4.17.1",
     "multer": "^1.4.2",
@@ -30,7 +29,6 @@
     "path": "^0.12.7",
     "pdf-creator-node": "^1.4.1",
     "pg": "^8.2.1",
-    "puppeteer": "^5.5.0",
-    "sequelize": "4.43.2"
+    "sequelize": "^4.43.2"
   }
 }
