--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ services:
         ports:
             - "4193:4193"
         build: 
-            context: .
+            context: ./server
             dockerfile: Dockerfile
         image: bill_generator
         container_name: app_bill_generator
         volumes:
-            - ./:/usr/src/bill_generator
+            - ./server:/usr/src/bill_generator
         environment:
             DATABASE_URL: postgres://postgres:eatsleepcode@postgres:5432/db
     postgres:
@@ -21,3 +21,14 @@ services:
             POSTGRES_USER: postgres
             POSTGRES_PASSWORD: eatsleepcode
             POSTGRES_DB: db
+    frontend: 
+        build: 
+            context: ./client
+            dockerfile: Dockerfile
+        image: bill_generator_frontend
+        ports: 
+            - "3000:3000"
+        volumes:
+            - ./client:/usr/src/bill_generator_frontend
+        links:
+            - "api"
