--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,9 +2,9 @@ FROM node:12.18.3
 
 WORKDIR /usr/src/bill_generator_frontend
 
-COPY ["package.json", "package-lock.json", "./"]
+COPY package*.json ./
 
-RUN npm install --production
+RUN npm install
 
 COPY . .
 
